--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,6 +21,16 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('blog_create') }}">Créer un article</a>
                     </li>
+
+                    {% if not app.user %}
+                        <li class="nav-item">
+                            <a href=" {{ path('security_login')}} " class="nav-link">Connexion</a>
+                        </li>
+                    {% else %}
+                        <li class="nav-item">
+                            <a href=" {{ path('security_logout')}} " class="nav-link">déconnexion</a>
+                        </li>
+                    {% endif %}
                 </ul>
             </div>
         </nav>
