--- a/templates/blog/show.html.twig
+++ b/templates/blog/show.html.twig
@@ -12,6 +12,8 @@
     </article>
 
     <section id="commentaires">
+        <h1> {{ article.comments | length }} Commentaires : </h1>
+
         {% for comment in article.comments %}
             <div class="comment">
                 <div class="row">
@@ -24,6 +26,14 @@
                 </div>
             </div>
         {% endfor %}
+
+        {{ form_start(commentForm) }}
+
+        {{ form_row(commentForm.author, {'attr': {'placeholder': "Votre nom"}})}}
+        {{ form_row(commentForm.content, {'attr': {'placeholder': "Votre commentaire"}})}}
+
+        <button type="submit" class="btn btn-success">Commenter</button>
+        {{ form_end(commentForm) }}
     </section>
 
 {% endblock %}
